Increased sidebar width to prevent effect list line clipping

--- a/res/index.css
+++ b/res/index.css
@@ -15,11 +15,10 @@ body {
   justify-content: flex-start;
   align-content: center;
   height: 100%;
-  width: 200px;
+  width: 300px;
 }
 
 .sidebar div {
-  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -61,9 +60,7 @@ body {
 }
 
 .category-switch label {
-  text-align: center;
-  display: inline-block;
-  width: 180px;
+  display: flex;
   background-color: rgb(192, 192, 192);
   color: rgba(0, 0, 0, 0.6);
   padding: 9px;
